--- a/BG_Modeling/config.yaml
+++ b/BG_Modeling/config.yaml
@@ -1,5 +1,5 @@
 ticker: 'spy'
-save_path: 'estimates/spy_params.npy'
+save_path: 'estimates\spy_theta_500_BT_init500.npy'
 train: false
 window: 100
 batch_size: 256
