updated to include scikit-learn

--- a/environment.yml
+++ b/environment.yml
@@ -7,10 +7,11 @@ dependencies:
   - python=3.10
   - pandas
   - numpy
+  - scipy
   - matplotlib
   - seaborn
   - yfinance
-  - scikit-le
+  - scikit-learn
   - jupyterlab
   - ipykernel
   - cvxpy
